[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.93.0",
    "fastapi>=0.136.1",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-azure-openai>=0.5.2",
    "llama-index-llms-azure-openai>=0.5.5",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-postgres>=0.8.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
